update documentation in project

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -1,13 +1,48 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "87d73d6a-6470-4b96-b534-3c0785a74861",
+   "cell_type": "markdown",
+   "id": "07e23247",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# conda install -c conda-forge segmentation-models-pytorch"
+    "# Introduction\n",
+    "\n",
+    "### Background:\n",
+    " Diaporthe citri, the causal agent of citrus melanose, is a hemi-biotrophic fungus that infects citrus and related genera. It produces raised, reddish-brown lesions on leaves, twigs, and fruit, which may coalesce under humid conditions to form large, cracked patches known as “mudcake” (Figure 1). This disease reduces citrus yield by causing premature fruit and leaf drop and diminishes the marketability of fresh fruit. While pruning dead wood—where the fungus reproduces—can limit spread, this method is labor-intensive. As a result, chemical controls like copper- and strobilurin-based fungicides are widely used, though they pose environmental and phytotoxic risks. Given the absence of resistant cultivars and increasing concerns over chemical inputs, alternative solutions such as biological control are gaining interest.\n",
+    "\n",
+    "![Petri Dish Prediction](petri.png)\n",
+    "\n",
+    " Biological control employs naturally occurring microbes to suppress plant pathogens through mechanisms such as antibiosis, competition, parasitism, and induced systemic resistance. Prior research highlights the potential of bacterial and fungal antagonists as sustainable tools in disease management."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29179bf3",
+   "metadata": {},
+   "source": [
+    "# Materials and Methods for Data Acquisition\n",
+    "\n",
+    "### Antagonism Assay and Image Acquisition:\n",
+    "To identify native bacterial isolates with antagonistic activity against D. citri, we screened 77 isolates collected from citrus tissue using in vitro dual-culture assays. After incubation, petri dishes were photographed inside a custom-built photobox (Smith & Schuster, 2021), which ensured high-resolution, standardized images by controlling lighting, minimizing reflections, and maintaining consistent camera placement.\n",
+    "\n",
+    "### Manual Image Analysis:\n",
+    "All 274 images, including experimental assays and controls, were analyzed using Fiji (version 2.13.1) (Schindelin et al., 2012). Fungal colonies were manually outlined using the paintbrush tool (magenta, 20-pixel width), and a macro script was run in batch mode to calculate colony area. The script calibrated scale using a reference ruler image, thresholded the outlines, generated a binary mask, and computed area measurements (Figure 2). While this method is highly accurate, it is time-intensive—averaging 48 seconds per image, the analysis of the full dataset required nearly 3 hours and 40 minutes.\n",
+    "\n",
+    "![Manual Workflow](manual_workflow.png)\n",
+    "\n",
+    "This led us to a central question: \n",
+    "\n",
+    "### Can we develop a machine learning algorithm to replace manual outlining and automate fungal area quantification—saving time while maintaining accuracy?\n",
+    "\n",
+    "Below we aim to answer that question."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5f93ad7",
+   "metadata": {},
+   "source": [
+    "## Import packages and set packages"
    ]
   },
   {
@@ -61,6 +96,14 @@
    "source": [
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
     "device"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "583c461d",
+   "metadata": {},
+   "source": [
+    "## Set up Unet model"
    ]
   },
   {
@@ -141,6 +184,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a58076e7",
+   "metadata": {},
+   "source": [
+    "### Model Preparation and Dataset Pipeline Overview\n",
+    "\n",
+    "This section sets up the U-Net model and prepares the custom dataset for semantic segmentation of Petri dish images.\n",
+    "\n",
+    "####  Model Configuration\n",
+    "- The U-Net model is instantiated with a ResNet34 encoder and softmax activation to produce a 3-class output: background, dish, and pathogen.\n",
+    "- The encoder (backbone) is frozen using `param.requires_grad = False`, meaning only the decoder and segmentation head will be trained. This reduces training time and leverages pretrained features.\n",
+    "- The optimizer is configured to only update the decoder and segmentation head parameters using Adam with a learning rate of 1e-4.\n",
+    "- CrossEntropyLoss is used as the loss function, appropriate for multi-class classification tasks.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "eb7230b2-f77f-472c-87df-382dbcdf3727",
@@ -163,6 +222,19 @@
     "    {'params': model.decoder.parameters()},\n",
     "    {'params': model.segmentation_head.parameters()}\n",
     "], lr=1e-4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8994068b",
+   "metadata": {},
+   "source": [
+    "###  Dataset Directories\n",
+    "- `image_dir` and `mask_dir` point to local folders that contain the input images and their corresponding segmentation masks, respectively.\n",
+    "\n",
+    "#### Custom Dataset Class (`SegmentationDataset`)\n",
+    "- This subclass of `torch.utils.data.Dataset` loads only valid `.png` mask files that have a corresponding `.jpg` image.\n",
+    "- In `__getitem__`, both the input image and mask are opened, transformed (e.g., normalized or tensor-converted), and returned as a pair for model training."
    ]
   },
   {
@@ -223,6 +295,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6537519f",
+   "metadata": {},
+   "source": [
+    "\n",
+    "\n",
+    "####  Transforms\n",
+    "- Images are normalized to match ImageNet statistics using `ToTensor()` and `Normalize(...)`.\n",
+    "- Masks are converted to long integer tensors using `PILToTensor()` and reshaped appropriately.\n",
+    "\n",
+    "####  DataLoader\n",
+    "- A `DataLoader` is created with a batch size of 10 and shuffling enabled to feed batches of image-mask pairs to the model during training.\n",
+    "\n",
+    "This setup ensures that the U-Net is efficiently trained on well-matched image/mask pairs, and it standardizes the preprocessing pipeline to align with expected input formats.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "d4d17f7a-5c4f-4232-91b3-f73ecd34ac23",
@@ -277,6 +366,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c1f7df4",
+   "metadata": {},
+   "source": [
+    "### Training and Evaluation Pipeline for U-Net\n",
+    "\n",
+    "This section implements the model training loop, validation phase, and a utility function to save predictions for individual samples."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 40,
    "id": "5d445fa8-25f6-4274-84be-ed8d47529642",
@@ -300,6 +399,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59f5a5e4",
+   "metadata": {},
+   "source": [
+    "### Pixel_accuracy \n",
+    "\n",
+    "Calculates per-pixel accuracy by comparing predicted class IDs to ground truth mask labels. It assumes both are shaped [B, H, W]. Useful for tracking segmentation performance during evaluation."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "e1c59203-9650-4724-be59-9aaf4cedb59d",
@@ -317,8 +426,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecd42d06",
+   "metadata": {},
+   "source": [
+    "### Model Training Loop and evaluation\n",
+    "\n",
+    "- Sets the model to training mode using model.train().\n",
+    "- Iterates over batches of images/masks from the DataLoader.\n",
+    "- Moves data to the GPU, computes predictions, evaluates loss (CrossEntropyLoss), and updates the model using backpropagation.\n",
+    "- Tracks cumulative loss per epoch.\n",
+    "\n",
+    "Evaluation:\n",
+    "- Switches the model to inference mode (disables dropout, batchnorm updates).\n",
+    "- Evaluates the model without computing gradients for faster performance.\n",
+    "- For each batch:\n",
+    "    - Predicts segmentation maps.\n",
+    "    - Computes loss and pixel-wise accuracy.\n",
+    "Outputs averaged loss and accuracy per epoch."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "645bc344-2735-44be-94b1-a7dbebf5564d",
    "metadata": {},
    "outputs": [
@@ -440,6 +570,48 @@
    "outputs": [],
    "source": [
     "# save_file(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4696b4a0",
+   "metadata": {},
+   "source": [
+    "###  Visualization Utility – Compare Ground Truth vs Prediction\n",
+    "\n",
+    "This section defines two utility functions to visualize and compare the model's predicted segmentation with the ground truth.\n",
+    "\n",
+    "\n",
+    "\n",
+    "####  `visualize_simple(image, pred_mask, true_mask, class_colors)`\n",
+    "\n",
+    "Displays three side-by-side panels using Matplotlib:\n",
+    "1. The original image.\n",
+    "2. The ground truth segmentation mask.\n",
+    "3. The predicted segmentation mask.\n",
+    "\n",
+    "**Arguments:**\n",
+    "- `image` (`Tensor`): The input image tensor in shape `(C, H, W)`.\n",
+    "- `pred_mask` (`Tensor`): The predicted mask, typically shape `(H, W)`.\n",
+    "- `true_mask` (`Tensor`): The ground truth segmentation mask.\n",
+    "- `class_colors` (`dict`): A mapping of class indices to RGB color tuples.\n",
+    "\n",
+    "The masks are first converted to NumPy arrays and then colorized using `mask_to_color()` before plotting.\n",
+    "\n",
+    "\n",
+    "\n",
+    "####  `mask_to_color(mask, class_colors)`\n",
+    "\n",
+    "Converts a 2D mask of class indices into a 3-channel RGB image using a provided color map.\n",
+    "\n",
+    "**Arguments:**\n",
+    "- `mask` (`ndarray`): The segmentation mask with shape `(H, W)` containing class indices.\n",
+    "- `class_colors` (`dict`): A dictionary mapping class labels to RGB tuples.\n",
+    "\n",
+    "**Returns:**\n",
+    "- A 3-channel color image (`H, W, 3`) where each class is visualized using the assigned color.\n",
+    "\n",
+    "This is especially useful for qualitative comparison of predicted vs true segmentations.\n"
    ]
   },
   {
@@ -578,8 +750,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d0097779",
+   "metadata": {},
+   "source": [
+    "### Use the entire data set (unlabeled as well)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "690239d2-7861-4c3e-a5b4-2fa3b445d231",
    "metadata": {},
    "outputs": [
@@ -621,7 +801,7 @@
     }
    ],
    "source": [
-    "# use entire data set (unlabeled as well)\n",
+    "\n",
     "class InferenceDataset(Dataset):\n",
     "    def __init__(self, image_dir, transform=None):\n",
     "        self.image_dir = Path(image_dir)\n",
@@ -701,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "f258ec18-adfe-4456-bc4f-d8354ef7529e",
    "metadata": {},
    "outputs": [
@@ -722,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "0f24c77c-5af2-4c9b-afd5-d678e0ca7eef",
    "metadata": {},
    "outputs": [
@@ -739,7 +919,7 @@
    ],
    "source": [
     "# -----------------------------\n",
-    "# 🎨 Visualize top 3 by percentage\n",
+    "# Visualize top 3 by percentage\n",
     "# -----------------------------\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -795,11 +975,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "id": "64a0b2c9",
+   "metadata": {},
+   "source": [
+    "## Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "353a15b1-fc31-484b-a420-d0e159f5ce5c",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Our U-Net–based transfer learning model demonstrates strong potential as a reliable tool for automated pathogen measurement on Petri dishes. The model achieves high agreement with manual measurements, as reflected by the following data anlysis done after the model was trained:\n",
+    "\n",
+    "- **R² = 0.828**, indicating that the model explains over 82% of the variance in manual annotations.\n",
+    "- **MAE = 2.89%**, showing minimal average deviation from expert measurements.\n",
+    "- **RMSE = 6.16%** and **RSE = 6.19%**, suggesting consistent, bounded error across predictions.\n",
+    "- A **strong inverse correlation (r = -0.91)** between model output and manual scoring confirms that as transfer learning improves, manual effort could decrease.\n",
+    "\n",
+    "![Petri Dish Prediction](pathogen_actual_vs_predicted.png)\n",
+    "\n",
+    "### Together, these findings show that our approach enables **fast, reproducible, and expert-level quantification of pathogen growth**, significantly reducing time and variability associated with manual evaluation.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a72860af",
+   "metadata": {},
    "source": []
   }
  ],
