Add last section

--- a/Model.ipynb
+++ b/Model.ipynb
@@ -1003,7 +1003,24 @@
    "cell_type": "markdown",
    "id": "a72860af",
    "metadata": {},
-   "source": []
+   "source": [
+    "## HyperParameter Tuning\n",
+    "- **epoch**: around 20 we can reach 99% on training score, more than 20 may lead to overfitting.\n",
+    "- **batch_size**\" our batch size is set to four because our manually labeled data size is only 50. Too large batch size may cause more training time in our model.\n",
+    "- **learning rate**: our learning rate is set to 1e-4. Since we have small train datasets and the epochs needed to train this model is around 20, this learning rate is pretty good in this project.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05605207",
+   "metadata": {},
+   "source": [
+    "## Discussion\n",
+    "- **What worked:** The model achieved a high segmentation accuracy with consistently strong performance across validation sets. It also demonstrated efficient training behavior, converging in relatively few epochs, indicating both architectural soundness and appropriate hyperparameter tuning.\n",
+    "\n",
+    "\n",
+    "- **What didn't work**\" The model underperformed on edge cases where the pathogen nearly covers the entire petri dish. These outliers, where pathogen coverage exceeds 80%, were not well represented in the training set—most of which contained 40–60% pathogen coverage. As a result, the model struggled to generalize to such extreme cases. Incorporating more diverse training samples, particularly with higher pathogen coverage, would likely improve the model’s robustness and overall performance."
+   ]
   }
  ],
  "metadata": {
